--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "devDependencies": {
     "browser-sync": "^2.18.12",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.4.2",
     "gulp-imagemin": "^3.3.0",
     "gulp-livereload": "^3.8.1",
     "gulp-uglify": "^3.0.0",
+    "imagemin-jpegtran": "^5.0.2",
+    "imagemin-pngquant": "^5.0.1",
     "merge-stream": "^1.0.1"
   }
 }
